# nexcalimat

./: .gitignore  README  README.md
.github/workflows/: backend-java.yaml  backend.yaml  frontend.yaml
backend/: .gitignore  graphiql.html  pom.xml  privateKey.pem  publicKey.pem  rsaPrivateKey.pem
backend/business/: README.md  pom.xml
backend/business-rs/: Cargo.toml
backend/business-rs/graphql/: GetProducts.graphql  schema.json
backend/business-rs/src/: main.rs
backend/docker/: docker-compose.yaml
backend/hasura-hook/: README.md  pom.xml
backend/hasura/metadata/: remote_schemas.yaml
backend/hasura/metadata/databases/: databases.yaml
backend/server/: .gitignore  README.md  pom.xml
backend/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native-micro
frontend/: .dockerignore  .env  .gitignore  .prettierignore  .prettierrc  README.md  codegen.yml  graphql.schema.json  houdini.config.js  package-lock.json  package.json  schema.graphql  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/docker/image/: Dockerfile  nginx.conf
frontend/src/: app.d.ts  app.html  app.scss  client.ts  hooks.server.ts  service-worker.ts  urqlClient.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
frontend/static/: site.webmanifest
kubernetes/: Chart.yaml  values.yaml
kubernetes/templates/: backend.yaml  minio.yaml
migrate/: input.txt  migration.py
ui/: .prettierrc  package-lock.json  tailwind.config.cjs
ui/src/: app.html
ui/src/routes/: +layout.svelte
(+261 files in other folders)
